--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "electron-redux": "^1.5.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-full-screen": "^1.1.1",
     "react-player": "^2.9.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
