--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,13 @@
     "dotenv": "^16.0.3",
     "electron": "^20.0.3",
     "electron-redux": "^1.5.4",
+    "history": "^5.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-player": "^2.9.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "react-router-loading": "^1.0.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
